add_subdirectory(BrainF)
add_subdirectory(Fibonacci)
add_subdirectory(HowToUseJIT)
add_subdirectory(HowToUseLLJIT)
add_subdirectory(IRTransforms)
add_subdirectory(Kaleidoscope)
add_subdirectory(ModuleMaker)
add_subdirectory(PankratovaLambda)
add_subdirectory(OksanaKozlovaLambda)
add_subdirectory(OrcV2Examples)
add_subdirectory(SpeculativeJIT)
add_subdirectory(Bye)
add_subdirectory(idoroshenko_lam)
add_subdirectory(Korkunov_lambda)
add_subdirectory(VokhmyaninaLambda)
add_subdirectory(DVorobyovLambda)
add_subdirectory(AvmusatovLambda)
add_subdirectory(VolokhLambda)
add_subdirectory(KovakimyLambda)


if(LLVM_ENABLE_EH AND (NOT WIN32) AND (NOT "${LLVM_NATIVE_ARCH}" STREQUAL "ARM"))
    add_subdirectory(ExceptionDemo)
endif()

if( HAVE_PTHREAD_H )
  add_subdirectory(ParallelJIT)
endif( HAVE_PTHREAD_H )
