add_subdirectory(Utils)
add_subdirectory(Bogoroditskaya)
add_subdirectory(Bogoroditskaya2)
add_subdirectory(Bogoroditskaya3)
add_subdirectory(idoroshenkoPass)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(ArivanovCount)
add_subdirectory(ArivanovLab2)
add_subdirectory(Vectorize)
add_subdirectory(solovevaPass)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(PankratovaPass)
add_subdirectory(PankratovaASPass)
add_subdirectory(PankratovaTransformPass)
add_subdirectory(Coroutines)
add_subdirectory(udachinaPass)
add_subdirectory(udachinaAnalysisPass)
add_subdirectory(CFGuard)
add_subdirectory(aanoskovStatPass)
add_subdirectory(BaturinaPass)
add_subdirectory(BaturinaPass2)
add_subdirectory(MelnikovLab1Pass)
add_subdirectory(MelnikovLab2Pass)

add_subdirectory(MelnikovLab3Pass)

add_subdirectory(Korkunov_ASpass)
add_subdirectory(KorkunovTransAnalysisPass)
add_subdirectory(Sazanov_Lab1_Pass)
add_subdirectory(DVorobyovCount)
add_subdirectory(Selivanovskaya_lab1)
add_subdirectory(aanoskovCounter)
add_subdirectory(IlyinPass)
add_subdirectory(IlyinPass2)
add_subdirectory(IlyinAnalysisPass)
add_subdirectory(pazamelin)
add_subdirectory(pazamelin_as)
add_subdirectory(AKomyaginCount)
add_subdirectory(AKomyaginASPass)
add_subdirectory(OksanaKozlova)
add_subdirectory(MoiseevPass)
add_subdirectory(AvmusatovCount)
add_subdirectory(AvmusatovPass)
add_subdirectory(CountPass)
add_subdirectory(AvmusatovAS)
add_subdirectory(pvi)
add_subdirectory(pvi2)
add_subdirectory(pvi3)
add_subdirectory(KovakimyCount)
add_subdirectory(KovakimyAnalysisPass)
add_subdirectory(PyanzinPass1)
add_subdirectory(Pyanzin_ASPass)
add_subdirectory(akUdachinaPass)
add_subdirectory(PyanzinPass3)
add_subdirectory(VolokhPass)
add_subdirectory(VokhmyaninaCounter)
add_subdirectory(VokhmyaninaLab2)
add_subdirectory(VokhmyaninaLab3)
add_subdirectory(Sazanov_Lab2_Pass)
add_subdirectory(MoiseevPass2)
add_subdirectory(VolokhSecondPass)
add_subdirectory(VolokhAnalysisPass)
add_subdirectory(KatyaMalyshevaLab1Pass)
add_subdirectory(KatyaMalyshevaLab2Pass)
add_subdirectory(KMalyshevaLab3Pass)
add_subdirectory(CounterPass)
add_subdirectory(VoronovaLab2)
add_subdirectory(BaturinaPass3)
add_subdirectory(aanoskovASPass)
add_subdirectory(SelivanovskayaLab3)
add_subdirectory(Strakhovcounter)
add_subdirectory(Strakhov2)
